apps/jackett/jackett-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: media-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
        vpn-client: tovpn
    spec:
      volumes:
        - name: jackett-config
          persistentVolumeClaim:
            claimName: jackett-config-pvc
      containers:
        - name: jackett
          image: docker.io/linuxserver/jackett:latest
          ports:
            - containerPort: 9117
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: jackett-config
              mountPath: /config
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        egress-gateway: 'true'
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
