apps/jackett/jackett-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jackett-ingress
  namespace: media-hub
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: jackett.10.0.1.253.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jackett
                port:
                  number: 9117
